--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,41 @@
 {
-  "git.ignoreLimitWarning": true
+  "window.zoomLevel": 0,
+  "breadcrumbs.enabled": true,
+  "terminal.integrated.defaultProfile.windows": "Command Prompt",
+  "explorer.confirmDelete": false,
+  "workbench.colorTheme": "Dracula",
+  "editor.fontFamily": "Fira Code",
+  "editor.fontLigatures": true,
+  "editor.fontSize": 12,
+  "editor.lineHeight": 22,
+  // Salva arquivos novos identados
+  "editor.formatOnSave": true,
+  // Limite do desenvolvimento
+  "editor.rulers": [80, 120],
+  "editor.tabSize": 2,
+  // mostra onde estamos na linha
+  "editor.renderLineHighlight": "gutter",
+  "terminal.integrated.fontSize": 12,
+  //tipagem
+  // "javascript.implicitProjectConfig.checkJs": true,
+
+  // realizad o autocomplete de html (extenção emmet) funcionar
+  "emmet.syntaxProfiles": {
+    "javascript": "jsx"
+    //tipagem
+  },
+  //Funcionar o className para o HTML
+  "emmet.includeLanguages": {
+    "javascript": "javascriptreact",
+    "nunjucks": "html"
+  },
+  // impede que altera os imports automaticamente do javascript
+  "javascript.updateImportsOnFileMove.enabled": "never",
+  // "breadcrumbs.enable": true,
+  // não mostrar dicas
+  "editor.parameterHints.enabled": false,
+  "prettier.eslintIntegration": true,
+  "git.enableSmartCommit": true,
+  "dart.checkForSdkUpdates": false,
+  "vsicons.dontShowNewVersionMessage": true
 }
